--- a/main.html
+++ b/main.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>heritage of telangana</title>
+    <title>Heritage of Telangana</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
@@ -24,7 +24,7 @@
             <a href="#about">
                 <li><i class="fas fa-info"></i> About heritage</li>
             </a>
-            <a href="">
+            <a href="#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
         </ul>
@@ -46,22 +46,33 @@
     </div>
     <hr color="black">
     <div class="sec">
+
         <div class="sec1">
             <h1>Monument</h1>
-            <p>Telangana region is home to several monuments spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the cultural zenith of Telangana state.</p>
+            <p>Telangana region is home to several monuments spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the cultural zenith of Telangana state.
+                <button>know more<i class="fas fa-long-arrow-alt-right"></i></button></p>
         </div>
         <div class="sec2">
             <h1>Museums</h1>
             <p>There are thirteen prominent museums in the state of Telangana. Alampur and Kolanupaka are two sites museums in the state. The district museums are in Warangal, Karimnagar, Nizamabad, Pillalamarri and Panagal. Hyderabad city has four museums
-                of great significance.</p>
+                of great significance.<button>know more<i class="fas fa-long-arrow-alt-right"></i></button></p>
         </div>
         <div class="sec3">
             <h1>Temples</h1>
-            <p>Telangana region is home to several Temples spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the faith of god.</p>
+            <p>Telangana region is home to several Temples spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the faith of god.<button>know
+                    more<i class="fas fa-long-arrow-alt-right"></i></button></p>
         </div>
     </div>
     <br>
-    <br><br>
+    <br>
+    <hr color="black">
+    <br>
+    <br>
+    <div class="b">
+        <i class="fas fa-map-marker-alt" id="locate"></i>
+        <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888615.2285305727!2d77.27840638782794!3d17.863191636862027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3350db9429ed43%3A0x63ef7ba741594059!2sTelangana!5e0!3m2!1sen!2sin!4v1609058054089!5m2!1sen!2sin"
+            width="800" height="400" frameborder="0"></iframe>
+    </div>
 </body>
 
 </html>
