--- a/main.html
+++ b/main.html
@@ -21,8 +21,8 @@
             <a href="">
                 <li><i class="fas fa-landmark"></i> Museums</li>
             </a>
-            <a href="#about">
-                <li><i class="fas fa-info"></i> About heritage</li>
+            <a href="">
+                <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
             <a href="#map">
                 <li><i class="fas fa-map-marker-alt"></i>Location</li>
