--- a/main.html
+++ b/main.html
@@ -18,10 +18,10 @@
             <a href="">
                 <li><i class="fas fa-monument"></i>Monument</li>
             </a>
-            <a href="">
+            <a href="museums/home work.html">
                 <li><i class="fas fa-landmark"></i> Museums</li>
             </a>
-            <a href="">
+            <a href="about telangana.html" target="_self">
                 <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
             <a href="#map">
