--- a/about telangana.html
+++ b/about telangana.html
@@ -10,33 +10,37 @@
 </head>
 
 <body>
-    <nav class="nav">
+    <nav class=" nav ">
         <ul>
-            <a href="#home">
-                <li><i class="fas fa-home"></i>Home</li>
+            <a href="main.html ">
+                <li><i class="fas fa-home "></i>Home</li>
             </a>
-            <a href="">
-                <li><i class="fas fa-monument"></i>Monument</li>
+            <a href=" ">
+                <li><i class="fas fa-monument "></i>Monument</li>
             </a>
-            <a href="">
-                <li><i class="fas fa-landmark"></i> Museums</li>
+            <a href="home work.html ">
+                <li><i class="fas fa-landmark "></i> Museums</li>
             </a>
-            <a href="about telangana.html">
-                <li><i class="fas fa-info"></i> About Telangana</li>
+            <a href="about telangana.html " target="_self ">
+                <li><i class="fas fa-info "></i> About Telangana</li>
             </a>
-            <a href="main.html#map">
-                <li><i class="fas fa-map-marker-alt"></i>Location</li>
+            <a href="main.html#map ">
+                <li><i class="fas fa-map-marker-alt "></i>Location</li>
             </a>
         </ul>
     </nav>
-    <div class="about-dance">
-        <h1>About folk dance of Telangana</h1>
-        <p>Perini Sivatandavam or Perini Thandavam is an ancient dance from Telangana which has been revived in recent times. <br> It originated and prospered in Telangana during the Kakatiya dynasty. The Perini Thandavam is a dance form usually <br> performed
-            by males. It is called 'Dance of Warriors'. Warriors before leaving to the battlefield enact this dance before <br> the idol of Lord Shiva. The dance form, Perini, reached its pinnacle during the rule of the 'Kakatiyas' who established <br>their
-            dynasty at Warangal and ruled for almost two centuries. It is believed that this dance form invokes 'Prerana' (inspiration) <br> and is dedicated to supreme dancer, Lord Shiva. Bonalu The folk festival of Bonalu in the Telangana region brings
-            with it<br> celebrations which see the colourfully dressed female dancers balancing pots (Bonalu), step to the rhythmic beats and <br> tunes in praise of the village deity Mahankali. Male dancers called Potharajus precede the female dancers
-            to the temple <br> lashing whips and neem leaves adding colour to the festivity.</p>
-        <img src="bg5.jpg" alt="">
+    <div class="links ">
+        <ul>
+            <li>
+                <a href="about culture.html" style="text-decoration: none;">About culture</a>
+            </li>
+            <li>
+                <a href="about language.html" style="text-decoration: none;">About language</a>
+            </li>
+            <li>
+                <a href="about dance.html" style="text-decoration: none;">About folk dance</a>
+            </li>
+        </ul>
     </div>
 </body>
 
