--- a/main.html
+++ b/main.html
@@ -12,13 +12,13 @@
 <body>
     <nav class="nav">
         <ul>
-            <a href="#home">
+            <a href="main.html">
                 <li><i class="fas fa-home"></i>Home</li>
             </a>
             <a href="">
                 <li><i class="fas fa-monument"></i>Monument</li>
             </a>
-            <a href="museums/home work.html">
+            <a href="home work.html">
                 <li><i class="fas fa-landmark"></i> Museums</li>
             </a>
             <a href="about telangana.html" target="_self">
@@ -55,7 +55,9 @@
         <div class="sec2">
             <h1>Museums</h1>
             <p>There are thirteen prominent museums in the state of Telangana. Alampur and Kolanupaka are two sites museums in the state. The district museums are in Warangal, Karimnagar, Nizamabad, Pillalamarri and Panagal. Hyderabad city has four museums
-                of great significance.<button>know more<i class="fas fa-long-arrow-alt-right"></i></button></p>
+                of great significance.
+                <a href="home work.html"><button>know more<i class="fas fa-long-arrow-alt-right"></i></button></a>
+            </p>
         </div>
         <div class="sec3">
             <h1>Temples</h1>
