--- a/home work.html
+++ b/home work.html
@@ -4,10 +4,30 @@
 <head>
 
     <title>Museums in Telangana‎</title>
-
+    <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="index.css">
 </head>
 
 <body style="background-color: rgb(99, 0, 0);">
+    <nav class="nav">
+        <ul>
+            <a href="main.html">
+                <li><i class="fas fa-home"></i>Home</li>
+            </a>
+            <a href="">
+                <li><i class="fas fa-monument"></i>Monument</li>
+            </a>
+            <a href="home work.html">
+                <li><i class="fas fa-landmark"></i> Museums</li>
+            </a>
+            <a href="about telangana.html" target="_self">
+                <li><i class="fas fa-info"></i> About Telangana</li>
+            </a>
+            <a href="main.html#map">
+                <li><i class="fas fa-map-marker-alt"></i>Location</li>
+            </a>
+        </ul>
+    </nav>
 
     <CENTER>
         <font color="yellow">
