--- a/home work.html
+++ b/home work.html
@@ -28,95 +28,96 @@
             </a>
         </ul>
     </nav>
+    <div class="bod">
+        <CENTER>
+            <font color="yellow">
+                <tr>
+                    <td>
+                        <h1>Museums in Telangana‎</h1>
+                    </td>
+                </tr>
+                <font color="white">
+                    <h1>District Museum Kolanupaka</h1>
 
-    <CENTER>
-        <font color="yellow">
-            <tr>
-                <td>
-                    <h1>Museums in Telangana‎</h1>
-                </td>
-            </tr>
-            <font color="white">
-                <h1>District Museum Kolanupaka</h1>
+                    <img src="District-Museum-Kolanupaka.jpg">
+                    <h3>
+                        <p>
+                            तेलंगाना के नलगोंडा जिले में कोलानुपाक, महावीर के प्राचीन 2000 साल पुराने जैन मंदिर के लिए प्रसिद्ध है, जिसमें महावीर की 1.5 मीटर ऊंची प्रतिमा है। 11 वीं शताब्दी के दौरान कोलनुपका कल्याणी चालुक्यों की दूसरी राजधानी थी। इस अवधि के दौरान, गांव जैनियों का
+                            एक महान धार्मिक केंद्र था, और दक्षिण भारत के अन्य महान जैन केंद्रों में शुमार था। स्मारक पत्थरों को यहां हजारों वर्षों से अच्छी तरह से संरक्षित किया गया है। Kolanupaka साइट संग्रहालय इस जगह का एक प्रमुख आकर्षण है। संग्रहालय
+                            में हिंदू और जैन धर्म दोनों के लिए मूर्तियां और प्रासंगिकता की अन्य वस्तुएं हैं। यह भारत के शानदार संग्रहालयों में से एक है, जहां कोई भी प्राचीन संस्कृति और विरासत का पता लगा सकता है। एक शिलालेख के साथ त्रिभुवनमल्ल की मानस्तंभ
+                            (विजय स्तंभ), 1076-1127 चालुक्य काल की गणपति प्रतिमा, 12 वीं शताब्दी ईस्वी की नटराज की प्रतिमा, चालुक्य काल की नटराज प्रतिमा, 12 वीं शताब्दी की कल्याणी चालुक्य काल की वीरंगल प्रतिमा (युगल) (विलोपन)। कल्याणी चालुक्य काल की महिषासुरमर्दनी,
+                            12 वीं शताब्दी ई। कोथपनपारा के साथ कल्याणी चालुक्य काल की उमा महेश्वर, काकतीय काल की 12 वीं शताब्दी ई। चामुंडी, काकतीय काल की 13 वीं शताब्दी की गोविंदा प्रतिमा, विजयनगर काल की 13 वीं शताब्दी ईस्वी की कोडंडा रामा प्रतिमा, 12
+                            वीं शताब्दी की। काकतीय काल की 13 वीं शताब्दी ईस्वी की महावीर योग मुद्रा में चालुक्य काल की प्रतिमा, 13 वीं शताब्दी ईस्वी की काकतीय काल की वज्रपाणि प्रतिमा, 13 वीं शताब्दी ईस्वी की आगंतुक सुविधाएं स्वच्छ पेयजल और विश्राम कक्ष
+                            उपलब्ध हैं। बगीचे में बैठने की व्यवस्था प्रदान की जाती है। कम कीमत की पुस्तिकाएं और ब्रोशर उपलब्ध हैं
+                        </p>
+                    </h3>
+                    <br>
+                    <br><br><br><br>
+                    <hr color="white">
+                    <h1>District Museum of Panagal</h1>
 
-                <img src="District-Museum-Kolanupaka.jpg">
-                <h3>
-                    <p>
-                        तेलंगाना के नलगोंडा जिले में कोलानुपाक, महावीर के प्राचीन 2000 साल पुराने जैन मंदिर के लिए प्रसिद्ध है, जिसमें महावीर की 1.5 मीटर ऊंची प्रतिमा है। 11 वीं शताब्दी के दौरान कोलनुपका कल्याणी चालुक्यों की दूसरी राजधानी थी। इस अवधि के दौरान, गांव जैनियों का
-                        एक महान धार्मिक केंद्र था, और दक्षिण भारत के अन्य महान जैन केंद्रों में शुमार था। स्मारक पत्थरों को यहां हजारों वर्षों से अच्छी तरह से संरक्षित किया गया है। Kolanupaka साइट संग्रहालय इस जगह का एक प्रमुख आकर्षण है। संग्रहालय में
-                        हिंदू और जैन धर्म दोनों के लिए मूर्तियां और प्रासंगिकता की अन्य वस्तुएं हैं। यह भारत के शानदार संग्रहालयों में से एक है, जहां कोई भी प्राचीन संस्कृति और विरासत का पता लगा सकता है। एक शिलालेख के साथ त्रिभुवनमल्ल की मानस्तंभ (विजय
-                        स्तंभ), 1076-1127 चालुक्य काल की गणपति प्रतिमा, 12 वीं शताब्दी ईस्वी की नटराज की प्रतिमा, चालुक्य काल की नटराज प्रतिमा, 12 वीं शताब्दी की कल्याणी चालुक्य काल की वीरंगल प्रतिमा (युगल) (विलोपन)। कल्याणी चालुक्य काल की महिषासुरमर्दनी,
-                        12 वीं शताब्दी ई। कोथपनपारा के साथ कल्याणी चालुक्य काल की उमा महेश्वर, काकतीय काल की 12 वीं शताब्दी ई। चामुंडी, काकतीय काल की 13 वीं शताब्दी की गोविंदा प्रतिमा, विजयनगर काल की 13 वीं शताब्दी ईस्वी की कोडंडा रामा प्रतिमा, 12 वीं
-                        शताब्दी की। काकतीय काल की 13 वीं शताब्दी ईस्वी की महावीर योग मुद्रा में चालुक्य काल की प्रतिमा, 13 वीं शताब्दी ईस्वी की काकतीय काल की वज्रपाणि प्रतिमा, 13 वीं शताब्दी ईस्वी की आगंतुक सुविधाएं स्वच्छ पेयजल और विश्राम कक्ष उपलब्ध
-                        हैं। बगीचे में बैठने की व्यवस्था प्रदान की जाती है। कम कीमत की पुस्तिकाएं और ब्रोशर उपलब्ध हैं
-                    </p>
-                </h3>
-                <br>
-                <br><br><br><br>
-                <hr color="white">
-                <h1>District Museum of Panagal</h1>
+                    <img src="District-Museum-of-Panagal-Nalgonda.jpg">
 
-                <img src="District-Museum-of-Panagal-Nalgonda.jpg">
+                    <h3>
+                        <p>The District Heritage Museum, Panagal is a historical museum established in Panagal village in Nalgonda district, Telangana. It is located close to the historic Chaya Someswara Swamy Temple of Panagal village.
 
-                <h3>
-                    <p>The District Heritage Museum, Panagal is a historical museum established in Panagal village in Nalgonda district, Telangana. It is located close to the historic Chaya Someswara Swamy Temple of Panagal village.
+                            <p>The Panagal Museum was established in February 1982. It is at a distance of four kilometers from Nalgonda town. Panagal in Nalgonda was a place of religious importance during Kakatiya period. The temples here were erected in
+                                remembrance of the Kakatiya rulers’ beloved deity, Shiva.
 
-                        <p>The Panagal Museum was established in February 1982. It is at a distance of four kilometers from Nalgonda town. Panagal in Nalgonda was a place of religious importance during Kakatiya period. The temples here were erected in remembrance
-                            of the Kakatiya rulers’ beloved deity, Shiva.
+                                <p>The total area of the museums complex is nearly 3 acres. There are many sculptures, prehistoric tools, coins, bronzes, beads, arms and weapons, copper plate inscriptions that are in display here. The objects displayed here
+                                    were collected from excavations carried out in Vardamana Kota, Yeleswaram, Phanigiri, Panagal and many of them have also been acquired from the State Museum, Hyderabad, ranging from 2nd Century AD to 18th Century AD.
 
-                            <p>The total area of the museums complex is nearly 3 acres. There are many sculptures, prehistoric tools, coins, bronzes, beads, arms and weapons, copper plate inscriptions that are in display here. The objects displayed here
-                                were collected from excavations carried out in Vardamana Kota, Yeleswaram, Phanigiri, Panagal and many of them have also been acquired from the State Museum, Hyderabad, ranging from 2nd Century AD to 18th Century AD.
+                                    <p>The museum also has statues and sculptures of various Hindu gods and goddesses dating back to the Ikshvaku dynasty of 1st century AD which are well preserved and protected at this museum constructed in the premises
+                                        of Pachala Someswara Swamy temple. Some of the ancient Shiva lingas that are now preserved in the museum have been collected from a village named Yeleswaram that was in submergence area of Nagarjuna Sagar dam.
 
-                                <p>The museum also has statues and sculptures of various Hindu gods and goddesses dating back to the Ikshvaku dynasty of 1st century AD which are well preserved and protected at this museum constructed in the premises of Pachala
-                                    Someswara Swamy temple. Some of the ancient Shiva lingas that are now preserved in the museum have been collected from a village named Yeleswaram that was in submergence area of Nagarjuna Sagar dam.
+                                        <p>Visitor Facilities Clean drinking water and rest rooms are available. Seating arrangements are provided in the garden. Low price booklets and brochures are available
+                    </h3><br><br><br><br><br>
+                    <hr color="white">
+                    <h1>Alampur Site Museum</h1>
+                    <img src="Alampur-Site-Museum.jpg">
+                    <h3>
+                        <p>Alampur located in Mahabubnagar district of Telangana is home to ancient Navabramha temples of 7th Century AD. Considered the western gateway of Srisailam, the town is also home to the revered Shaktipeetam of Jogulamba. Badami
+                            Chalukyas constructed the Nava Brahma temples of Alampur. Alampur Site Museum preserves archeological remains which show a hybrid style of architecture, dating back to the 6th-7thcentury AD.
 
-                                    <p>Visitor Facilities Clean drinking water and rest rooms are available. Seating arrangements are provided in the garden. Low price booklets and brochures are available
-                </h3><br><br><br><br><br>
-                <hr color="white">
-                <h1>Alampur Site Museum</h1>
-                <img src="Alampur-Site-Museum.jpg">
-                <h3>
-                    <p>Alampur located in Mahabubnagar district of Telangana is home to ancient Navabramha temples of 7th Century AD. Considered the western gateway of Srisailam, the town is also home to the revered Shaktipeetam of Jogulamba. Badami Chalukyas
-                        constructed the Nava Brahma temples of Alampur. Alampur Site Museum preserves archeological remains which show a hybrid style of architecture, dating back to the 6th-7thcentury AD.
+                            <p>Alampur Site Museum was established in the year 1952. It is surrounded by the famous Nava Brahma temples where more than 124 stone sculptures and 26 inscriptional slabs are on display including 64 loose sculptures. The period
+                                of these sculptures ranges from 6th to 16th Century AD and they belong to Kakatiyas, Chalukyas, and Vijayanagara dynasties. The Alampur museum is known for its large and varied collection of sculptures that are arranged
+                                in a big hall. The entrance to this museum is a sculpted but an unmarked temple doorway. The collections on display include hundreds of beautiful pieces, several of them in polished black stone that indicate that these
+                                originate from the 11th century Kakatiyas.
 
-                        <p>Alampur Site Museum was established in the year 1952. It is surrounded by the famous Nava Brahma temples where more than 124 stone sculptures and 26 inscriptional slabs are on display including 64 loose sculptures. The period of
-                            these sculptures ranges from 6th to 16th Century AD and they belong to Kakatiyas, Chalukyas, and Vijayanagara dynasties. The Alampur museum is known for its large and varied collection of sculptures that are arranged in a big
-                            hall. The entrance to this museum is a sculpted but an unmarked temple doorway. The collections on display include hundreds of beautiful pieces, several of them in polished black stone that indicate that these originate from
-                            the 11th century Kakatiyas.
+                                <p>The first striking image is that of the polished stone image of Subrahmanya and Valli followed by unique Mahishasuramardhini image. The museum also has a horizontal, circular black-stone sculpture of Nagnaka Bhanda, the
+                                    Lotus-headed goddess in naked form. At the centre of the hall there are two large, square shaped Kakatiya ceiling panels which are placed facing up. The one towards left has three rows, each showing the images of Naga,
+                                    Indra and Agni. The one towards the right shows the common motif of Siva, who is surrounded by Ashtadikpalas. The far wall is adorned by a beautiful image of Siva as Mahesha and a polished granite doorway which then
+                                    leads to back room. The right wall displays images of Surya, and of Siva in Asuravadhamurti and Bhairava avtar. There is also a unique split piece with Nataraja on top accompanied by Agni on the bottom panel. The centre
+                                    of the hall houses a stunning black sculpture of Nataraja and this is faced by a large granite Nandi. Nataraja, Mahishasura Mardini, Surya, Kartikeya, and Naga sculptures from here were also displayed in many international
+                                    exhibitions held in London, Germany, Paris etc. More than 20,000 visitors visit the museum every year, which is only growing with more influx of tourists. Visitor Facilities Clean drinking water and rest rooms are available.
+                                    Seating arrangements are provided in the garden. Low price booklets and brochures are available
+                    </h3>
+                    <br><br><br><br><br>
+                    <hr color="white">
 
-                            <p>The first striking image is that of the polished stone image of Subrahmanya and Valli followed by unique Mahishasuramardhini image. The museum also has a horizontal, circular black-stone sculpture of Nagnaka Bhanda, the Lotus-headed
-                                goddess in naked form. At the centre of the hall there are two large, square shaped Kakatiya ceiling panels which are placed facing up. The one towards left has three rows, each showing the images of Naga, Indra and Agni.
-                                The one towards the right shows the common motif of Siva, who is surrounded by Ashtadikpalas. The far wall is adorned by a beautiful image of Siva as Mahesha and a polished granite doorway which then leads to back room.
-                                The right wall displays images of Surya, and of Siva in Asuravadhamurti and Bhairava avtar. There is also a unique split piece with Nataraja on top accompanied by Agni on the bottom panel. The centre of the hall houses
-                                a stunning black sculpture of Nataraja and this is faced by a large granite Nandi. Nataraja, Mahishasura Mardini, Surya, Kartikeya, and Naga sculptures from here were also displayed in many international exhibitions held
-                                in London, Germany, Paris etc. More than 20,000 visitors visit the museum every year, which is only growing with more influx of tourists. Visitor Facilities Clean drinking water and rest rooms are available. Seating arrangements
-                                are provided in the garden. Low price booklets and brochures are available
-                </h3>
-                <br><br><br><br><br>
-                <hr color="white">
+                    <h1>Buddhist Heritage Museum, Buddavanam Nalgonda
+                    </h1>
+                    <img src="Buddhist-Heritage-Museum-Buddavanam.jpg">
 
-                <h1>Buddhist Heritage Museum, Buddavanam Nalgonda
-                </h1>
-                <img src="Buddhist-Heritage-Museum-Buddavanam.jpg">
+                    <P>Timings
+                        <P> 10:30am AM to 5:00pm PM
+                            <P>closed on Fridays and Public Holidays</tbody>
 
-                <P>Timings
-                    <P> 10:30am AM to 5:00pm PM
-                        <P>closed on Fridays and Public Holidays</tbody>
+                                <P>Location
+                                    <P> Close to Right Branch Canal, Nagarjuna Sagar Dam Nagarjuna Sagar dam region, located in Nalgonda district of Telangana is home to some of the oldest Buddhist civilizations in India, and a vast number of historic coins
+                                        and artefacts were recovered here during the construction of this dam.
 
-                            <P>Location
-                                <P> Close to Right Branch Canal, Nagarjuna Sagar Dam Nagarjuna Sagar dam region, located in Nalgonda district of Telangana is home to some of the oldest Buddhist civilizations in India, and a vast number of historic coins and
-                                    artefacts were recovered here during the construction of this dam.
+                                        <P>Many of these artefacts have now been preserved in the Buddhist Heritage Museum, Buddavanam near Nagarjuna sagar dam, Nalgonda district which was developed by the Department of Heritage Telangana. The Buddhist Heritage
+                                            Museum was officially inaugurated on May 14th, 2014 in connection with the Buddha Jayanthi celebrations.
 
-                                    <P>Many of these artefacts have now been preserved in the Buddhist Heritage Museum, Buddavanam near Nagarjuna sagar dam, Nalgonda district which was developed by the Department of Heritage Telangana. The Buddhist Heritage
-                                        Museum was officially inaugurated on May 14th, 2014 in connection with the Buddha Jayanthi celebrations.
+                                            <P>Buddavanam here is also renowned as the Buddhist Theme Park, close to the right bank canal of Nagarjuna Sagar dam towards Telangana side. The museum showcases an impressive display of Buddhist Sculptures, Buddhist
+                                                Tankas, Bronzes, Pala, Gandhara Sculptures, Ajantha Paintings and Stone Sculptures. There are new galleries being added here for the purpose of preserving timeless monuments and sculptures that depict the
+                                                rich past heritage and glory of this region, which was once inhabited by Acharya Nagarjuna, one of the founders of the Madhyamika Buddhism and one of the greatest philosophers India has ever produced.
 
-                                        <P>Buddavanam here is also renowned as the Buddhist Theme Park, close to the right bank canal of Nagarjuna Sagar dam towards Telangana side. The museum showcases an impressive display of Buddhist Sculptures, Buddhist
-                                            Tankas, Bronzes, Pala, Gandhara Sculptures, Ajantha Paintings and Stone Sculptures. There are new galleries being added here for the purpose of preserving timeless monuments and sculptures that depict the rich
-                                            past heritage and glory of this region, which was once inhabited by Acharya Nagarjuna, one of the founders of the Madhyamika Buddhism and one of the greatest philosophers India has ever produced.
+                                                <P>Visitor Facilities Clean drinking water and rest rooms are available. Seating arrangements are provided in the garden. Low price booklets and brochures are available.
 
-                                            <P>Visitor Facilities Clean drinking water and rest rooms are available. Seating arrangements are provided in the garden. Low price booklets and brochures are available.
-
-    </CENTER>
+        </CENTER>
+    </div>
 </body>
 
 </html>
