--- a/about dance.html
+++ b/about dance.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Telangana</title>
+    <title>About folk dance of Telangana</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
