--- a/main.html
+++ b/main.html
@@ -75,6 +75,15 @@
         <iframe id="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3888615.2285305727!2d77.27840638782794!3d17.863191636862027!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a3350db9429ed43%3A0x63ef7ba741594059!2sTelangana!5e0!3m2!1sen!2sin!4v1609058054089!5m2!1sen!2sin"
             width="800" height="400" frameborder="0"></iframe>
     </div>
+    <footer class="footer">
+        <form class="form">
+            <h1>contact us</h1>
+            <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
+            <input type="email" placeholder="enter your email adress" required>
+            <textarea id="area" cols="31" rows="10" placeholder="write here..."></textarea>
+            <button type="submit"><i class="far fa-paper-plane"></i>send</button>
+        </form>
+    </footer>
 </body>
 
 </html>
