--- a/main.html
+++ b/main.html
@@ -77,8 +77,8 @@
     </div>
     <div class="subscribe">
         <h1>SUBSCRIBE TO OUR NEWS LETTER</h1>
-        <form> <input type="email" placeholder="Enter Your Email Adress">
-            <button type="submit"></button></form>
+        <form> <input type="email" placeholder="Enter Your Email Adress" required>
+            <button type="submit">submit</button></form>
     </div>
     <footer class="footer">
         <form class="form">
