--- a/main.html
+++ b/main.html
@@ -50,7 +50,8 @@
         <div class="sec1">
             <h1>Monument</h1>
             <p>Telangana region is home to several monuments spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the cultural zenith of Telangana state.
-                <button>know more<i class="fas fa-long-arrow-alt-right"></i></button></p>
+                <button>know more<i class="fas fa-long-arrow-alt-right"></i></button>
+            </p>
         </div>
         <div class="sec2">
             <h1>Museums</h1>
@@ -78,16 +79,50 @@
     <div class="subscribe">
         <h1>SUBSCRIBE TO OUR NEWS LETTER</h1>
         <form> <input type="email" placeholder="Enter Your Email Adress" required>
-            <button type="submit">submit</button></form>
+            <button type="submit">submit</button>
+        </form>
     </div>
     <footer class="footer">
         <form class="form">
             <h1>contact us</h1>
             <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
             <input type="email" placeholder="enter your email adress" required>
-            <textarea id="area" cols="31" rows="10" placeholder="write here..."></textarea>
+            <textarea id="area" cols="31" rows="10" placeholder="Message..." required></textarea>
             <button type="submit"><i class="far fa-paper-plane"></i>send</button>
         </form>
+        <div class="quick-links">
+            <h2>QUICK LINKS</h2>
+            <ul>
+                <li><a href="">gallery</a></li>
+                <li>
+                    <a href="">Monument</a>
+                </li>
+                <li>
+                    <a href="home work.html"> Museums</a>
+                </li>
+                <li>
+                    <a href=""> About us </a>
+                </li>
+                <li>
+                    <a href=""> create a blog</a>
+                </li>
+            </ul>
+        </div>
+        <h2 class="end">&copy;2020 Department of Heritage Telangana | All Rights Reserved. </h2>
+        <div class="adress">
+            <h2> Department of Heritage Telangana</h2>
+            <p><i class="fas fa-map-marker-alt"></i>Opposite to Golkonda Handicrafts Emporium,<br> Gunfoundry, Abids, Hyderabad <br> Telangana, India - 500001</p>
+        </div>
+        <div class="info">
+            <p>
+                <i class="fas fa-phone-alt"></i> <a href="tel:8744876721">+91-87448-76721</a>
+            </p>
+
+            <p>
+                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
+            </p>
+        </div>
+        <div class="icon"><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fab fa-twitter"></i><i class="fab fa-youtube"></i></div>
     </footer>
 </body>
 
