--- a/main.html
+++ b/main.html
@@ -115,14 +115,14 @@
         </div>
         <div class="info">
             <p>
-                <i class="fas fa-phone-alt"></i> <a href="tel:8744876721">+91-87448-76721</a>
+                <i class="fas fa-phone-alt"></i> <a href="tel:+918744876721">+91-87448-76721</a>
             </p>
 
             <p>
                 <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
             </p>
         </div>
-        <div class="icon"><i class="fab fa-facebook-f"></i><i class="fab fa-instagram"></i><i class="fab fa-twitter"></i><i class="fab fa-youtube"></i></div>
+        <div class="icon"><i class="fab fa-facebook-f icons"></i><i class="fab fa-instagram icons"></i><i class="fab fa-twitter icons"></i><i class="fab fa-youtube icons"></i></div>
     </footer>
 </body>
 
