--- a/main.html
+++ b/main.html
@@ -110,7 +110,7 @@
         </div>
         <h2 class="end">&copy;2020 Department of Heritage Telangana | All Rights Reserved. </h2>
         <div class="adress">
-            <h2> Department of Heritage Telangana</h2>
+            <h2> Department of Heritage Telangana</h2><br>
             <p><i class="fas fa-map-marker-alt"></i>Opposite to Golkonda Handicrafts Emporium,<br> Gunfoundry, Abids, Hyderabad <br> Telangana, India - 500001</p>
         </div>
         <div class="info">
