--- a/about language.html
+++ b/about language.html
@@ -39,6 +39,48 @@
             context has long been lost, and standard Urdu is used. Lambadi is also widely used, and Marathi <br> and Kannada predominate in border areas. Many tribal languages are also spoken, especially in Khammam, the largest <br> being Koya and Gondi.</p>
         <img src="lang.png" alt="">
     </div>
+    <footer class="footer lang-footer">
+        <form class="form">
+            <h1>contact us</h1>
+            <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
+            <input type="email" placeholder="enter your email adress" required>
+            <textarea id="area" cols="31" rows="10" placeholder="Message..." required></textarea>
+            <button type="submit"><i class="far fa-paper-plane"></i>send</button>
+        </form>
+        <div class="quick-links">
+            <h2>QUICK LINKS</h2>
+            <ul>
+                <li><a href="">gallery</a></li>
+                <li>
+                    <a href="">Monument</a>
+                </li>
+                <li>
+                    <a href="home work.html"> Museums</a>
+                </li>
+                <li>
+                    <a href=""> About us </a>
+                </li>
+                <li>
+                    <a href="blog.html"> create a blog</a>
+                </li>
+            </ul>
+        </div>
+        <h2 class="end">&copy;2020 Department of Heritage Telangana | All Rights Reserved. </h2>
+        <div class="adress">
+            <h2> Department of Heritage Telangana</h2><br>
+            <p><i class="fas fa-map-marker-alt"></i>Opposite to Golkonda Handicrafts Emporium,<br> Gunfoundry, Abids, Hyderabad <br> Telangana, India - 500001</p>
+        </div>
+        <div class="info">
+            <p>
+                <i class="fas fa-phone-alt"></i> <a href="tel:+918744876721">+91-87448-76721</a>
+            </p>
+
+            <p>
+                <i class="fas fa-envelope"></i> <a href="mailto:vaibhavyadav.1050@gmail.com"> vaibhavyadav.1050@gmail.com</a>
+            </p>
+        </div>
+        <div class="icon"><i class="fab fa-facebook-f icons"></i><i class="fab fa-instagram icons"></i><i class="fab fa-twitter icons"></i><i class="fab fa-youtube icons"></i></div>
+    </footer>
 </body>
 
 </html>
