--- a/blog.html
+++ b/blog.html
@@ -4,48 +4,40 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Telangana</title>
+    <title>blog</title>
     <script src="https://kit.fontawesome.com/99c5510ff4.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="index.css">
 </head>
 
 <body>
-    <nav class=" nav ">
+    <nav class="nav">
         <ul>
-            <a href="main.html ">
-                <li><i class="fas fa-home "></i>Home</li>
+            <a href="main.html">
+                <li><i class="fas fa-home"></i>Home</li>
             </a>
-            <a href=" ">
-                <li><i class="fas fa-monument "></i>Monument</li>
+            <a href="">
+                <li><i class="fas fa-monument"></i>Monument</li>
             </a>
-            <a href="home work.html ">
-                <li><i class="fas fa-landmark "></i> Museums</li>
+            <a href="home work.html">
+                <li><i class="fas fa-landmark"></i> Museums</li>
             </a>
-            <a href="about telangana.html " target="_self ">
-                <li><i class="fas fa-info "></i> About Telangana</li>
+            <a href="about telangana.html" target="_self">
+                <li><i class="fas fa-info"></i> About Telangana</li>
             </a>
-            <a href="main.html#map ">
-                <li><i class="fas fa-map-marker-alt "></i>Location</li>
+            <a href="main.html#map">
+                <li><i class="fas fa-map-marker-alt"></i>Location</li>
             </a>
         </ul>
     </nav>
-    <div class="links ">
-        <ul>
-            <li>
-                <a href="about culture.html" style="text-decoration: none;">About culture</a>
-            </li>
-            <li>
-                <a href="about language.html" style="text-decoration: none;">About language</a>
-            </li>
-            <li>
-                <a href="about dance.html" style="text-decoration: none;">About folk dance</a>
-            </li>
-            <li>
-                <a href="about flora fauna.html" style="text-decoration: none;">about flora and fauna of Telangana</a>
-            </li>
-        </ul>
+    <div class="blog">
+        <h1>CREATE YOUR BLOG</h1>
+        <form class="formm">
+            <input type="text" placeholder="enter your full name">
+            <textarea cols="80" rows="20" placeholder="type your blog here"></textarea>
+            <button type="submit"><i class="fas fa-upload"></i>upload</button>
+        </form>
     </div>
-    <footer class="footer about-footer">
+    <footer class="footer blog-footer">
         <form class="form">
             <h1>contact us</h1>
             <input type="text" placeholder="enter your full name" minlength="2" maxlength="25" required>
