--- a/main.html
+++ b/main.html
@@ -104,7 +104,7 @@
                     <a href=""> About us </a>
                 </li>
                 <li>
-                    <a href=""> create a blog</a>
+                    <a href="blog.html"> create a blog</a>
                 </li>
             </ul>
         </div>
