--- a/home work.html
+++ b/home work.html
@@ -42,13 +42,13 @@
                     <img src="District-Museum-Kolanupaka.jpg">
                     <h3>
                         <p>
-                            तेलंगाना के नलगोंडा जिले में कोलानुपाक, महावीर के प्राचीन 2000 साल पुराने जैन मंदिर के लिए प्रसिद्ध है, जिसमें महावीर की 1.5 मीटर ऊंची प्रतिमा है। 11 वीं शताब्दी के दौरान कोलनुपका कल्याणी चालुक्यों की दूसरी राजधानी थी। इस अवधि के दौरान, गांव जैनियों का
-                            एक महान धार्मिक केंद्र था, और दक्षिण भारत के अन्य महान जैन केंद्रों में शुमार था। स्मारक पत्थरों को यहां हजारों वर्षों से अच्छी तरह से संरक्षित किया गया है। Kolanupaka साइट संग्रहालय इस जगह का एक प्रमुख आकर्षण है। संग्रहालय
-                            में हिंदू और जैन धर्म दोनों के लिए मूर्तियां और प्रासंगिकता की अन्य वस्तुएं हैं। यह भारत के शानदार संग्रहालयों में से एक है, जहां कोई भी प्राचीन संस्कृति और विरासत का पता लगा सकता है। एक शिलालेख के साथ त्रिभुवनमल्ल की मानस्तंभ
-                            (विजय स्तंभ), 1076-1127 चालुक्य काल की गणपति प्रतिमा, 12 वीं शताब्दी ईस्वी की नटराज की प्रतिमा, चालुक्य काल की नटराज प्रतिमा, 12 वीं शताब्दी की कल्याणी चालुक्य काल की वीरंगल प्रतिमा (युगल) (विलोपन)। कल्याणी चालुक्य काल की महिषासुरमर्दनी,
-                            12 वीं शताब्दी ई। कोथपनपारा के साथ कल्याणी चालुक्य काल की उमा महेश्वर, काकतीय काल की 12 वीं शताब्दी ई। चामुंडी, काकतीय काल की 13 वीं शताब्दी की गोविंदा प्रतिमा, विजयनगर काल की 13 वीं शताब्दी ईस्वी की कोडंडा रामा प्रतिमा, 12
-                            वीं शताब्दी की। काकतीय काल की 13 वीं शताब्दी ईस्वी की महावीर योग मुद्रा में चालुक्य काल की प्रतिमा, 13 वीं शताब्दी ईस्वी की काकतीय काल की वज्रपाणि प्रतिमा, 13 वीं शताब्दी ईस्वी की आगंतुक सुविधाएं स्वच्छ पेयजल और विश्राम कक्ष
-                            उपलब्ध हैं। बगीचे में बैठने की व्यवस्था प्रदान की जाती है। कम कीमत की पुस्तिकाएं और ब्रोशर उपलब्ध हैं
+                            Kolanupak in Nalgonda district of Telangana is famous for the ancient 2000-year-old Jain temple of Mahavira, which has a 1.5 meter high statue of Mahavira. Kolanupaka was the second capital of the Kalyani Chalukyas during the 11th century. During this
+                            period, the village was a great religious center of the Jains, and was among the other great Jain centers of South India. The memorial stones have been well preserved here for thousands of years. Kolanupaka Site Museum is a
+                            major attraction of this place. The museum houses sculptures and other objects of relevance to both Hindu and Jainism. It is one of the magnificent museums in India, where one can explore ancient culture and heritage. Manastambha
+                            (Victory Pillar) of Tribhuvanamalla with an inscription, 1076-1127 Ganapati statue of Chalukya period, Nataraja statue of 12th century AD, Nataraja statue of Chalukya period, Virangal statue (couple) of Kalyani Chalukya period
+                            of 12th century ( Deletion). Mahishasuramardani of Kalyani Chalukya period, 12th century AD. Uma Maheswara of Kalyani Chalukya period with Kothapanapara, 12th century AD of Kakatiya period. Chamundi, 13th century Govinda statue
+                            of Kakatiya period, Kodanda Rama statue of 13th century AD of Vijayanagar period, 12th century. The Mahavir Yoga Mudra of the Kakatiya era has the Chalukya period statue in the 13th century AD, the 13th century AD Vajrapani
+                            statue of the Kakatiya period, the 13th century AD visitor facilities, clean drinking water and restrooms are available. A seating arrangement is provided in the garden. Low priced booklets and brochures are available.
                         </p>
                     </h3>
                     <br>
