--- a/main.html
+++ b/main.html
@@ -50,7 +50,7 @@
         <div class="sec1">
             <h1>Monument</h1>
             <p>Telangana region is home to several monuments spread across the ten districts. These were built by the rulers of several prominent dynasties of this region. They represent the cultural zenith of Telangana state.
-                <button>know more<i class="fas fa-long-arrow-alt-right"></i></button>
+                <a href="monument.html"> <button>know more<i class="fas fa-long-arrow-alt-right"></i></button></a>
             </p>
         </div>
         <div class="sec2">
